popup overflow fix

--- a/client/src/UIComponents/PageNav/PageNav.scss
+++ b/client/src/UIComponents/PageNav/PageNav.scss
@@ -34,6 +34,10 @@
 {
   text-shadow:0 0 1px black;
 }
+.purple-background .page-director.curr-page
+{
+  text-shadow:0 0 3px white;
+}
 .page-director:hover
 {
   text-shadow:0 0 1px #90278e;
